# MCRL-SPIDER

./: .gitignore  LICENSE  Readme.md
Calculations/: TurningTest.m  feet_test.m
Software/src/hexapod_control/: CMakeLists.txt  Readme.md  package.xml
Software/src/hexapod_control/include/hexapod_control/: dynamixel.hpp  gait.hpp  ik.hpp  motion_control.hpp  servo_driver.hpp
Software/src/hexapod_control/params/: hexapod.yaml
Software/src/hexapod_control/src/: gait.cpp  hexapod_controller.cpp  ik.cpp  motion_control.cpp  servo_driver.cpp
Software/src/hexapod_control/test/: test_gait.cpp  test_gait_turning.cpp  test_ik.cpp  test_motion.cpp
Software/src/hexapod_description/: CMakeLists.txt  Leptan.sdf
Software/src/hexapod_description/meshes/: TibiaCol.dae
Software/src/hexapod_description/rviz/: urdf.rviz
Software/src/hexapod_description/urdf/: hexapod.urdf.xacro
Software/src/hexapod_description_mk2/: CMakeLists.txt  hexa_model.xacro  model.config  package.xml
Software/src/hexapod_description_mk2/launch/: display_launch.py
Software/src/hexapod_description_mk2/meshes/: Coxa.dae  Femur.dae  Tibia.dae
Software/src/hexapod_description_mk2/urdf/: hexapod.urdf.xacro
Software/src/hexapod_msgs/: CMakeLists.txt
Software/src/launch_files/: CMakeLists.txt
Software/src/launch_files/launch/: hexapod_launch.py
Software/src/supervisor/: Readme.md  package.xml  setup.py
Software/src/supervisor/supervisor/: Led_ring.py
Software/src/turtlesim/src/: turtle_frame.cpp
install/: local_setup.sh  setup.sh
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
install/hexapod_control/lib/hexapod_control/: hexapod_control_exe
install/hexapod_control/share/hexapod_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hexapod_control/share/hexapod_control/params/: hexapod.yaml  test_params.hpp
install/hexapod_description/share/hexapod_description/: package.bash  package.sh  package.xml  package.zsh
install/hexapod_description/share/hexapod_description/launch/: display_launch.py
install/hexapod_msgs/share/hexapod_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/launch_files/share/launch_files/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/supervisor/lib/supervisor/: supervisor_node
install/supervisor/share/supervisor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
(+66 files in other folders)
